// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: has no list 1`] = `
<SelectLegacy
  autoBlur={true}
  clearable={false}
  onChange={[Function]}
  optionRenderer={[Function]}
  options={
    Array [
      Object {
        "icon": <TreeIcon />,
        "label": "component_measures.tab.tree",
        "value": "tree",
      },
      Object {
        "icon": <TreemapIcon />,
        "label": "component_measures.tab.treemap",
        "value": "treemap",
      },
    ]
  }
  searchable={false}
  value="list"
  valueRenderer={[Function]}
/>
`;

exports[`should render correctly: has no tree 1`] = `
<SelectLegacy
  autoBlur={true}
  clearable={false}
  onChange={[Function]}
  optionRenderer={[Function]}
  options={
    Array [
      Object {
        "icon": <ListIcon />,
        "label": "component_measures.tab.list",
        "value": "list",
      },
    ]
  }
  searchable={false}
  value="list"
  valueRenderer={[Function]}
/>
`;

exports[`should render correctly: has no treemap 1`] = `
<SelectLegacy
  autoBlur={true}
  clearable={false}
  onChange={[Function]}
  optionRenderer={[Function]}
  options={
    Array [
      Object {
        "icon": <TreeIcon />,
        "label": "component_measures.tab.tree",
        "value": "tree",
      },
      Object {
        "icon": <ListIcon />,
        "label": "component_measures.tab.list",
        "value": "list",
      },
      Object {
        "icon": <TreemapIcon />,
        "label": "component_measures.tab.treemap",
        "value": "treemap",
      },
    ]
  }
  searchable={false}
  value="list"
  valueRenderer={[Function]}
/>
`;
